--- a/Desktop/LP制作/自分専用/index.html
+++ b/Desktop/LP制作/自分専用/index.html
@@ -16,6 +16,7 @@
             --clr-bg: #f8f9fa;
             --clr-text: #333;
             --clr-card: #ffffff;
+            --clr-gray: #6c757d;
             --border-radius: 10px;
             --box-shadow: rgba(0,0,0,.06) 0 2px 8px;
         }
